--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p id="subTitle" class="subtitle">Small acts that create beautiful changes</p>
             </header>
             <section class="glass-card form-section">
-                <h2 id="formHeading">💜 Leave Your Trace</h2>
+                <h2 id="formHeading">🦋 Leave Your Trace</h2>
                 <form id="postForm">
                     <input type="text" id="titleInput" placeholder="Title..." required>
                     <textarea id="bodyInput" rows="3" placeholder="Describe your effect..." required></textarea>
